RESOLVED FIXED259529
Properly handle errors in the cookie's domain when setting a cookie with the Cookie Store API
https://bugs.webkit.org/show_bug.cgi?id=259529
Summary Properly handle errors in the cookie's domain when setting a cookie with the ...
rupin
Reported 2023-07-26 12:06:18 PDT
Properly handle errors in the cookie's domain when setting a cookie with the Cookie Store API
Attachments
rupin
Comment 1 2023-07-26 13:33:48 PDT
EWS
Comment 2 2023-07-26 20:49:14 PDT
Committed 266351@main (58f6a2dd0bf8): <https://commits.webkit.org/266351@main> Reviewed commits have been landed. Closing PR #16111 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-07-26 20:50:17 PDT
Note You need to log in before you can comment on or make changes to this bug.